Implemented close account feature